# loreal_lerobot

./: .gitmodules  CHANGELOG.md  README.md  conda_environment.yaml  gripper_fix.md  pyproject.toml  setup_env.sh
benchmarks/camera/: README.md  benchmark_opencv_camera.py
docs/source/: _toctree.yml  hilserl.mdx  il_robots.mdx  streaming_video_encoding.mdx
examples/: spacemouse_dual_config_example.py
examples/backward_compatibility/: replay.py
src/lerobot/async_inference/: robot_client.py
src/lerobot/cameras/: utils.py
src/lerobot/cameras/opencv/: camera_opencv.py
src/lerobot/cameras/reachy2_camera/: reachy2_camera.py
src/lerobot/cameras/realsense/: camera_realsense.py
src/lerobot/cameras/xense/: README.md  __init__.py  camera_xense.py  configuration_xense.py
src/lerobot/configs/: eval.py  policies.py
src/lerobot/datasets/: aggregate.py  dataset_tools.py  lerobot_dataset.py  video_utils.py
src/lerobot/datasets/lerobot2mcap/: README.md  __init__.py  config_generator.py  converter.py  dataset_info.py  logger.py  sorted_mcap_converter.py  video_loader_av.py
src/lerobot/datasets/lerobot_dataset_gui/: app.py  processor.py
src/lerobot/motors/: motors_bus.py
src/lerobot/rl/: actor.py  eval_policy.py  gym_manipulator.py  learner.py
src/lerobot/robots/: __init__.py  mock_robot.py  utils.py
src/lerobot/robots/arx5_follower/: __init__.py  arx5_follower.py  config_arx5_follower.py
src/lerobot/robots/bi_arx5/: bi_arx5.py  config_bi_arx5.py  lerobot-ARX5.md
src/lerobot/robots/bi_dobot_nova5/: __init__.py  bi_dobot_nova5.py  config_bi_dobot_nova5.py  config_flare_gripper.py  xense_gripper.py
src/lerobot/robots/bi_dobot_nova5_dh/: README.md  __init__.py  bi_dobot_nova5_dh.py  config_bi_dobot_nova5_dh.py  config_dh_gripper_integrated.py  dh_gripper_integrated.py  (+1 more)
src/lerobot/robots/pylibfranka_research3/xense_franka/: .gitignore  README.md  README_aiofranka.md  pyproject.toml  setup.py  test.py
src/lerobot/robots/pylibfranka_research3/xense_franka/.github/workflows/: docs.yml
src/lerobot/robots/pylibfranka_research3/xense_franka/examples/: 01_collect_ref_traj.py  02_spacemouse_teleop.py  03_gamepad_teleop.py  03_gamepad_teleop_sync copy.py  03_gamepad_teleop_sync.py  04_replay.py  05_realsense.py  06_sysid.py  06_sysid_all.py  cartesian_impedance_example.py  gamepad_joint7_impedance_example.py  gamepad_teleop_example.py  play_real_rel.py  plot.ipynb  spacemouse_sender.py  state.py  ws_joint_teleop_client.py  ws_joint_teleop_server.py  ws_teleop_server.py
src/lerobot/robots/pylibfranka_research3/xense_franka/xense_franka/: __init__.py  client.py  controller.py  robot.py  sync_controller.py
src/lerobot/scripts/: client_commands.md  download_hf_dataset.py  lerobot_calibrate.py  lerobot_check_dataset.py  lerobot_edit_dataset.py  lerobot_find_cameras.py  lerobot_find_joint_limits.py  lerobot_record.py  lerobot_replay.py  lerobot_teleoperate.py  lerobot_test.py  push_dataset_to_hub.py
src/lerobot/teleoperators/: utils.py
src/lerobot/teleoperators/pico4_hand/xensevr-pc-service-pybind/: CMakeLists.txt  setup.py
src/lerobot/teleoperators/pico4_hand/xensevr-pc-service-pybind/bindings/: py_bindings.cpp
src/lerobot/utils/: control_utils.py  robot_utils.py  utils.py  visualization_utils.py
test/: test_streaming_video_encoder.py
(+91 files in other folders)
